--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,6 +5,7 @@
     <title>МБОУ СОШ №44</title>
     <meta charset="UTF-8">
     {% load staticfiles %}
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon">
     <link rel="stylesheet" id="style" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="{% static "css/reset.css" %}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -35,7 +36,7 @@
             <div id="bottom">
                 <div id="address"><a target="_blank" href="https://yandex.ru/maps/39/rostov-na-donu/?l=map&source=wizgeo&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fll%3D39.792%252C47.272%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%25A0%25D0%25BE%25D1%2581%25D1%2582%25D0%25BE%25D0%25B2-%25D0%25BD%25D0%25B0-%25D0%2594%25D0%25BE%25D0%25BD%25D1%2583%252C%2520%25D0%2594%25D0%25BD%25D0%25B5%25D0%25BF%25D1%2580%25D0%25BE%25D0%25BF%25D0%25B5%25D1%2582%25D1%2580%25D0%25BE%25D0%25B2%25D1%2581%25D0%25BA%25D0%25B0%25D1%258F%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%252C%252014%252F103&text=%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F%2C%20%D0%A0%D0%BE%D1%81%D1%82%D0%BE%D0%B2-%D0%BD%D0%B0-%D0%94%D0%BE%D0%BD%D1%83%2C%20%D0%94%D0%BD%D0%B5%D0%BF%D1%80%D0%BE%D0%BF%D0%B5%D1%82%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%2C%2014%2F103&sll=39.792223%2C47.271914&sspn=0.023839%2C0.008602&ll=39.792223%2C47.271651&z=16">344020, Ростов-на-Дону, ул. Днепропетровская, д. 14</a></div>
                 <div class="else">
-                    <a href="http://rostov44.eljur.ru" target="_blank"> <img src="{% static "img/favicon.ico" %}" width="50"> </a>
+                    <a href="http://rostov44.eljur.ru" target="_blank"> <img src="{% static "img/elzh.ico" %}" width="50"> </a>
                     <a href="http://rostov44.eljur.ru" target="_blank">ЭлЖур</a>
                     <a href="#" class="bvi-panel-open-menu">Версия для слабовидящих(1)</a>
                 </div>
